[package]
name = "gongxifacai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.1.1"
image = { version = "0.24.8", features = ["rayon"] }
imageproc = "0.23.0"
indicatif = "0.17.7"
ndarray = "0.15.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rusttype = "0.9.3"
video-rs = { version = "0.6.0", features = ["ndarray"] }
